tests/tests/snapshots/test__layouts__layouts-duplicate-files.snap
---
source: tests/tests/layouts.rs
expression: output
---
test/
  layouts/
    testing/
      testing2.ts (114 bytes)
      ────────────────────────────────────────
      // This file has been generated by Specta. Do not edit this file manually.
      export type Testing = {
      	c: string,
      };
      ════════════════════════════════════════

    testing.ts (220 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    
    import type * as test$layouts$testing$testing2 from "./testing/testing2";
    export type Testing = {
    	b: test$layouts$testing$testing2.Testing,
    };
    ════════════════════════════════════════

  layouts.ts (285 bytes)
  ────────────────────────────────────────
  // This file has been generated by Specta. Do not edit this file manually.
  
  import type * as test$layouts$testing from "./layouts/testing";
  export type Another = {
  	bruh: string,
  };
  
  export type MoreType = {
  	u: string,
  };
  
  export type Testing = {
  	a: test$layouts$testing.Testing,
  };
  ════════════════════════════════════════
