tests/tests/snapshots/test__layouts__layouts-duplicate-module-prefixed.snap
---
source: tests/tests/layouts.rs
expression: module_prefixed
---
// This file has been generated by Specta. Do not edit this file manually.
export type test_layouts_Another = {
	bruh: string,
};

export type test_layouts_MoreType = {
	u: string,
};

export type test_layouts_Testing = {
	a: test_layouts_testing_Testing,
};

export type test_layouts_testing_Testing = {
	b: test_layouts_testing_testing2_Testing,
};

export type test_layouts_testing_testing2_Testing = {
	c: string,
};
