tests/tests/snapshots/test__layouts__layouts-duplicate-namespaces.snap
---
source: tests/tests/layouts.rs
expression: namespaces
---
// This file has been generated by Specta. Do not edit this file manually.

namespace $s$ {

	export namespace test {

		export namespace layouts {
			export type Another = {
				bruh: string,
			};

			export type MoreType = {
				u: string,
			};

			export type Testing = {
				a: $s$.test.layouts.testing.Testing,
			};

			export namespace testing {
				export type Testing = {
					b: $s$.test.layouts.testing.testing2.Testing,
				};

				export namespace testing2 {
					export type Testing = {
						c: string,
					};
				}
			}
		}
	}
}
export import test = $s$.test;
