tests/tests/snapshots/test__layouts__layouts-empty-module-path-files.snap
---
source: tests/tests/layouts.rs
expression: output
---
tests/
  tests/
    layouts.ts (105 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    export type testing = number;
    ════════════════════════════════════════
