tests/tests/snapshots/test__layouts__layouts-empty-module-path-flat.snap
---
source: tests/tests/layouts.rs
expression: flat
---
// This file has been generated by Specta. Do not edit this file manually.
export type testing = number;
