tests/tests/snapshots/test__layouts__layouts-empty-module-path-module-prefixed.snap
---
source: tests/tests/layouts.rs
expression: module_prefixed
---
// This file has been generated by Specta. Do not edit this file manually.
export type tests_tests_layouts_testing = number;
