tests/tests/snapshots/test__layouts__layouts-empty-module-path-namespaces.snap
---
source: tests/tests/layouts.rs
expression: namespaces
---
// This file has been generated by Specta. Do not edit this file manually.

namespace $s$ {

	export namespace tests {

		export namespace tests {

			export namespace layouts {
				export type testing = number;
			}
		}
	}
}
export import tests = $s$.tests;
