tests/tests/snapshots/test__layouts__layouts-non-duplicate-files.snap
---
source: tests/tests/layouts.rs
expression: output
---
test/
  layouts.ts (158 bytes)
  ────────────────────────────────────────
  // This file has been generated by Specta. Do not edit this file manually.
  export type Another = {
  	bruh: string,
  };
  
  export type MoreType = {
  	u: string,
  };
  ════════════════════════════════════════
