tests/tests/snapshots/test__layouts__layouts-non-duplicate-module-prefixed.snap
---
source: tests/tests/layouts.rs
expression: module_prefixed
---
// This file has been generated by Specta. Do not edit this file manually.
export type test_layouts_Another = {
	bruh: string,
};

export type test_layouts_MoreType = {
	u: string,
};
