tests/tests/snapshots/test__layouts__layouts-non-duplicate-namespaces.snap
---
source: tests/tests/layouts.rs
expression: namespaces
---
// This file has been generated by Specta. Do not edit this file manually.

namespace $s$ {

	export namespace test {

		export namespace layouts {
			export type Another = {
				bruh: string,
			};

			export type MoreType = {
				u: string,
			};
		}
	}
}
export import test = $s$.test;
